generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x", "rhel-openssl-3.0.x"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}
  
model user {
  id                      Int                @id @default(autoincrement())
  created_at              DateTime           @default(now())
  updated_at              DateTime           @default(now()) @updatedAt
  archived_at             DateTime?
  auth_id                 String             @unique
  first_name              String
  last_name               String
  full_name               String
  email                   String             @unique
  avatar_url              String?
  active_workspace_id     Int?
  hubspot_contact_id      String?
  sentry_id               String?
  post_hog_id             String?
  last_login_at           DateTime?
  onboarding_completed_at DateTime?
  onboarding_step         onboarding_step?   @default(PERSONAL_INFO)
  professional_role       String?
  source                  String?
  temp_company_size       String?
  temp_industry           String?
  tutorial_completed      Boolean            @default(false)
  active_workspace        workspace?         @relation("active_workspace", fields: [active_workspace_id], references: [id])
  workspaces              user_workspace[]
  scheduled_emails        scheduled_email[]
  workflows        workflow[]           @relation("author")
  sent_invitations      workspace_invitation[] @relation("UserInvitations")
  @@index([active_workspace_id])
  @@index([email])
  @@index([auth_id])
  @@index([auth_id], map: "auth_id_cover_idx")
  @@map("user")
}

model workspace {
  id                 Int                       @id @default(autoincrement())
  created_at         DateTime                  @default(now())
  updated_at         DateTime                  @default(now()) @updatedAt
  archived_at        DateTime?
  name               String
  slug               String?                   @unique
  icon_url           String?
  brand_logo_url     String?
  brand_name_img_url String?
  background_colour  String?
  linear_customer_id String?
  stripe_customer_id String?                   @unique
  hubspot_company_id String?
  company_size       String?
  industry           String?
  branding_enabled   Boolean                   @default(false)
  subscription_id    Int?                      @unique
  subscription       subscription?             @relation(fields: [subscription_id], references: [id])
  billing_infos      workspace_billing_infos?
  billings           billing[]
  folders            folder[]
  active_users       user[]                    @relation("active_workspace")
  user_workspaces    user_workspace[]
  workflows          workflow[]
  invitations        workspace_invitation[]

  @@index([stripe_customer_id])
  @@index([subscription_id])
  @@map("workspace")
}

model workspace_billing_infos {
  id              Int       @id @default(autoincrement())
  created_at      DateTime  @default(now())
  updated_at      DateTime  @default(now()) @updatedAt
  billing_email   String
  billing_address String
  tax_rate        Decimal   @db.Decimal(5, 2)
  vat_number      String?
  workspace_id    Int       @unique
  workspace       workspace @relation(fields: [workspace_id], references: [id], onDelete: Cascade)

  @@index([workspace_id])
  @@map("workspace_billing_infos")
}

model subscription {
  id                     Int                 @id @default(autoincrement())
  created_at             DateTime            @default(now())
  updated_at             DateTime            @default(now()) @updatedAt
  canceled_at            DateTime?
  workspace_id           Int                 @unique
  stripe_subscription_id String              @unique
  trial_end_date         DateTime?
  plan_type              plan_type
  quantity_seats         Int
  current_period_start   DateTime
  current_period_end     DateTime
  status                 subscription_status
  workspace              workspace?
  billings               billing[]

  @@map("subscription")
}

model billing {
  id                Int          @id @default(autoincrement())
  created_at        DateTime     @default(now())
  updated_at        DateTime     @default(now()) @updatedAt
  paid_at           DateTime?
  subscription_id   Int
  stripe_invoice_id String       @unique
  amount_net        Int
  tax_amount        Int
  amount_gross      Int
  currency          String       @db.VarChar(3)
  invoice_date      DateTime
  due_date          DateTime
  workspace_id      Int
  subscription      subscription @relation(fields: [subscription_id], references: [id])
  workspace         workspace    @relation(fields: [workspace_id], references: [id], onDelete: Cascade)

  @@index([subscription_id])
  @@index([workspace_id])
  @@index([stripe_invoice_id])
  @@map("billing")
}

model user_workspace {
  id           Int       @id @default(autoincrement())
  user_id      Int
  workspace_id Int
  role         user_role @default(ADMIN)
  user         user      @relation(fields: [user_id], references: [id], onDelete: Cascade)
  workspace    workspace @relation(fields: [workspace_id], references: [id], onDelete: Cascade)

  @@unique([user_id, workspace_id], name: "unique_user_workspace")
  @@index([user_id, workspace_id], map: "user_workspace_composite_idx")
  @@index([user_id])
  @@index([workspace_id])
  @@map("user_workspace")
}

model folder {
  id           Int        @id @default(autoincrement())
  name         String
  workspace_id Int
  parent_id    Int?
  icon_url     String?
  emote        String?
  path         String?
  position     Int        @default(0)
  parent       folder?    @relation("folder_hierarchy", fields: [parent_id], references: [id])
  subfolders   folder[]   @relation("folder_hierarchy")
  workspace    workspace  @relation(fields: [workspace_id], references: [id], onDelete: Cascade)
  workflows    workflow[]

  @@index([workspace_id])
  @@index([parent_id])
  @@index([path])
  @@map("folder")
}

model workflow {
  id               Int                @id @default(autoincrement())
  created_at       DateTime           @default(now())
  updated_at       DateTime           @default(now()) @updatedAt
  last_opened      DateTime?
  name             String
  icon             String?
  description      String
  additional_notes String?
  process_owner    String?
  review_date      DateTime?
  workspace_id     Int
  folder_id        Int?
  is_public        Boolean            @default(true)
  public_access_id String?            @unique
  status           workflow_status    @default(DRAFT)
  blocks           block[]
  paths            path[]
  stroke_lines     stroke_line[]
  folder           folder?            @relation(fields: [folder_id], references: [id])
  workspace        workspace          @relation(fields: [workspace_id], references: [id], onDelete: Cascade)
  author           user?              @relation("author", fields: [author_id], references: [id])
  author_id        Int? 

  @@unique([name, workspace_id])
  @@index([workspace_id])
  @@index([folder_id])
  @@map("workflow")
}

/// Collection of connected blocks forming a workflow path
model path {
  id            Int                 @id @default(autoincrement())
  name          String
  workflow_id   Int
  blocks        block[]
  workflow      workflow            @relation(fields: [workflow_id], references: [id])
  parent_blocks path_parent_block[]

  @@index([workflow_id])
  @@map("path")
}

/// Junction table that allows paths to be triggered from multiple parent blocks
model path_parent_block {
  path_id    Int
  block_id   Int
  created_at DateTime @default(now())
  block      block    @relation("path_parent", fields: [block_id], references: [id], onDelete: Cascade)
  path       path     @relation(fields: [path_id], references: [id], onDelete: Cascade)

  @@id([path_id, block_id])
  @@index([path_id])
  @@index([block_id])
  @@map("path_parent_block")
}

model block {
  id                  Int                 @id @default(autoincrement())
  created_at          DateTime            @default(now())
  updated_at          DateTime            @default(now()) @updatedAt
  type                block_type
  position            Int
  title               String?
  icon                String?
  description         String?
  image               String?
  original_image      String?
  image_description   String?
  average_time        String?
  assignee               String?
  task_type           task_type?
  workflow_id         Int
  path_id             Int
  is_endpoint         Boolean?            @default(false)
  delay_seconds       Int?
  delay_event         String?
  delay_type          delay_type?
  path                path                @relation(fields: [path_id], references: [id], onDelete: Cascade)
  workflow            workflow            @relation(fields: [workflow_id], references: [id], onDelete: Cascade)
  child_paths         path_parent_block[] @relation("path_parent")
  source_stroke_lines stroke_line[]       @relation("stroke_source")
  target_stroke_lines stroke_line[]       @relation("stroke_target")

  @@index([workflow_id])
  @@index([path_id])
  @@index([type])
  @@map("block")
}

model stroke_line {
  id              Int      @id @default(autoincrement())
  source_block_id Int
  target_block_id Int
  workflow_id     Int
  label           String
  created_at      DateTime @default(now())
  updated_at      DateTime @default(now()) @updatedAt
  control_points  Json?    // Array of {x: number, y: number}
  source_block    block    @relation("stroke_source", fields: [source_block_id], references: [id], onDelete: Cascade)
  target_block    block    @relation("stroke_target", fields: [target_block_id], references: [id], onDelete: Cascade)
  workflow        workflow @relation(fields: [workflow_id], references: [id], onDelete: Cascade)

  @@index([source_block_id])
  @@index([target_block_id])
  @@index([workflow_id])
  @@map("stroke_line")
}

model scheduled_email {
  id            Int                @id @default(autoincrement())
  created_at    DateTime           @default(now())
  updated_at    DateTime           @default(now()) @updatedAt
  user_id       Int
  email_type    String
  scheduled_for DateTime
  status        email_status       @default(PENDING)
  sent          Boolean            @default(false)
  sent_at       DateTime?
  metadata      Json?
  error         String?
  retry_count   Int                @default(0)
  user          user               @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([user_id, email_type], name: "unique_pending_email_per_user_type", map: "unique_pending_email_per_user_type_where")
  @@index([user_id])
  @@index([scheduled_for])
  @@index([status])
  @@index([sent])
  @@map("scheduled_emails")
}

model workspace_invitation {
  id             Int        @id @default(autoincrement())
  workspace_id   Int
  email          String
  inviter_id     Int
  status         invitation_status @default(PENDING)
  invited_at     DateTime   @default(now())
  accepted_at    DateTime?
  expired_at     DateTime?
  workspace      workspace  @relation(fields: [workspace_id], references: [id], onDelete: Cascade)
  inviter        user       @relation("UserInvitations", fields: [inviter_id], references: [id], onDelete: Cascade)

  @@index([workspace_id])
  @@index([email])
  @@index([status])
}

enum onboarding_step {
  PERSONAL_INFO
  PROFESSIONAL_INFO
  WORKSPACE_SETUP
  COMPLETED
  INVITED_USER
}

enum user_role {
  ADMIN
  EDITOR
  READER
}

enum block_type {
  DELAY
  STEP
  PATH
  BEGIN
  END
  LAST
  MERGE
}

enum subscription_status {
  ACTIVE
  TRIALING
  CANCELED
}

enum plan_type {
  FREE
  EARLY_ADOPTER
}

enum task_type {
  MANUAL
  AUTOMATIC
}

enum delay_type {
  FIXED_DURATION
  WAIT_FOR_EVENT
}

enum workflow_status {
  DRAFT
  ACTIVE
  IN_REVIEW
  NEEDS_UPDATE
  ARCHIVED
}

enum email_status {
  PENDING
  CANCELLED
  PAUSED
  SENT
  FAILED
}

enum invitation_status {
  PENDING
  ACCEPTED
  EXPIRED
  REVOKED
}
