//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  archived_at DateTime
  auth_id String [unique, not null]
  first_name String [not null]
  last_name String [not null]
  full_name String [not null]
  email String [unique, not null]
  avatar_url String
  active_workspace_id Int
  hubspot_contact_id String
  sentry_id String
  post_hog_id String
  last_login_at DateTime
  onboarding_completed_at DateTime
  onboarding_step onboarding_step [default: 'PERSONAL_INFO']
  professional_role String
  source String
  temp_company_size String
  temp_industry String
  tutorial_completed Boolean [not null, default: false]
  active_workspace workspace
  workspaces user_workspace [not null]
  scheduled_emails scheduled_emails [not null]
  workflows workflow [not null]
  sent_invitations workspace_invitation [not null]
}

Table workspace {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  archived_at DateTime
  name String [not null]
  slug String [unique]
  icon_url String
  brand_logo_url String
  brand_name_img_url String
  background_colour String
  linear_customer_id String
  stripe_customer_id String [unique]
  hubspot_company_id String
  company_size String
  industry String
  branding_enabled Boolean [not null, default: false]
  subscription_id Int [unique]
  subscription subscription
  billing_infos workspace_billing_infos
  billings billing [not null]
  folders folder [not null]
  active_users user [not null]
  user_workspaces user_workspace [not null]
  workflows workflow [not null]
  invitations workspace_invitation [not null]
}

Table workspace_billing_infos {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  billing_email String [not null]
  billing_address String [not null]
  tax_rate Decimal [not null]
  vat_number String
  workspace_id Int [unique, not null]
  workspace workspace [not null]
}

Table subscription {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  canceled_at DateTime
  workspace_id Int [unique, not null]
  stripe_subscription_id String [unique, not null]
  trial_end_date DateTime
  plan_type plan_type [not null]
  quantity_seats Int [not null]
  current_period_start DateTime [not null]
  current_period_end DateTime [not null]
  status subscription_status [not null]
  workspace workspace
  billings billing [not null]
}

Table billing {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  paid_at DateTime
  subscription_id Int [not null]
  stripe_invoice_id String [unique, not null]
  amount_net Int [not null]
  tax_amount Int [not null]
  amount_gross Int [not null]
  currency String [not null]
  invoice_date DateTime [not null]
  due_date DateTime [not null]
  workspace_id Int [not null]
  subscription subscription [not null]
  workspace workspace [not null]
}

Table user_workspace {
  id Int [pk, increment]
  user_id Int [not null]
  workspace_id Int [not null]
  role user_role [not null, default: 'ADMIN']
  user user [not null]
  workspace workspace [not null]

  indexes {
    (user_id, workspace_id) [unique]
  }
}

Table folder {
  id Int [pk, increment]
  name String [not null]
  workspace_id Int [not null]
  parent_id Int
  icon_url String
  emote String
  path String
  position Int [not null, default: 0]
  parent folder
  subfolders folder [not null]
  workspace workspace [not null]
  workflows workflow [not null]
}

Table workflow {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  last_opened DateTime
  name String [not null]
  icon String
  description String [not null]
  additional_notes String
  process_owner String
  review_date DateTime
  workspace_id Int [not null]
  folder_id Int
  is_public Boolean [not null, default: true]
  public_access_id String [unique]
  status workflow_status [not null, default: 'DRAFT']
  blocks block [not null]
  paths path [not null]
  stroke_lines stroke_line [not null]
  folder folder
  workspace workspace [not null]
  author user
  author_id Int

  indexes {
    (name, workspace_id) [unique]
  }
}

Table path {
  id Int [pk, increment]
  name String [not null]
  workflow_id Int [not null]
  blocks block [not null]
  workflow workflow [not null]
  parent_blocks path_parent_block [not null]

  Note: 'Collection of connected blocks forming a workflow path'
}

Table path_parent_block {
  path_id Int [not null]
  block_id Int [not null]
  created_at DateTime [default: `now()`, not null]
  block block [not null]
  path path [not null]

  indexes {
    (path_id, block_id) [pk]
  }

  Note: 'Junction table that allows paths to be triggered from multiple parent blocks'
}

Table block {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  type block_type [not null]
  position Int [not null]
  title String
  icon String
  description String
  image String
  original_image String
  image_description String
  average_time String
  assignee String
  task_type task_type
  workflow_id Int [not null]
  path_id Int [not null]
  is_endpoint Boolean [default: false]
  delay_seconds Int
  delay_event String
  delay_type delay_type
  path path [not null]
  workflow workflow [not null]
  child_paths path_parent_block [not null]
  source_stroke_lines stroke_line [not null]
  target_stroke_lines stroke_line [not null]
}

Table stroke_line {
  id Int [pk, increment]
  source_block_id Int [not null]
  target_block_id Int [not null]
  workflow_id Int [not null]
  label String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  control_points Json
  source_block block [not null]
  target_block block [not null]
  workflow workflow [not null]
}

Table scheduled_emails {
  id Int [pk, increment]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
  user_id Int [not null]
  email_type String [not null]
  scheduled_for DateTime [not null]
  status email_status [not null, default: 'PENDING']
  sent Boolean [not null, default: false]
  sent_at DateTime
  metadata Json
  error String
  retry_count Int [not null, default: 0]
  user user [not null]

  indexes {
    (user_id, email_type) [unique]
  }
}

Table workspace_invitation {
  id Int [pk, increment]
  workspace_id Int [not null]
  email String [not null]
  inviter_id Int [not null]
  status invitation_status [not null, default: 'PENDING']
  invited_at DateTime [default: `now()`, not null]
  accepted_at DateTime
  expired_at DateTime
  workspace workspace [not null]
  inviter user [not null]
}

Enum onboarding_step {
  PERSONAL_INFO
  PROFESSIONAL_INFO
  WORKSPACE_SETUP
  COMPLETED
  INVITED_USER
}

Enum user_role {
  ADMIN
  EDITOR
  READER
}

Enum block_type {
  DELAY
  STEP
  PATH
  BEGIN
  END
  LAST
  MERGE
}

Enum subscription_status {
  ACTIVE
  TRIALING
  CANCELED
}

Enum plan_type {
  FREE
  EARLY_ADOPTER
}

Enum task_type {
  MANUAL
  AUTOMATIC
}

Enum delay_type {
  FIXED_DURATION
  WAIT_FOR_EVENT
}

Enum workflow_status {
  DRAFT
  ACTIVE
  IN_REVIEW
  NEEDS_UPDATE
  ARCHIVED
}

Enum email_status {
  PENDING
  CANCELLED
  PAUSED
  SENT
  FAILED
}

Enum invitation_status {
  PENDING
  ACCEPTED
  EXPIRED
  REVOKED
}

Ref: user.active_workspace_id > workspace.id

Ref: workspace.subscription_id - subscription.id

Ref: workspace_billing_infos.workspace_id - workspace.id [delete: Cascade]

Ref: billing.subscription_id > subscription.id

Ref: billing.workspace_id > workspace.id [delete: Cascade]

Ref: user_workspace.user_id > user.id [delete: Cascade]

Ref: user_workspace.workspace_id > workspace.id [delete: Cascade]

Ref: folder.parent_id - folder.id

Ref: folder.workspace_id > workspace.id [delete: Cascade]

Ref: workflow.folder_id > folder.id

Ref: workflow.workspace_id > workspace.id [delete: Cascade]

Ref: workflow.author_id > user.id

Ref: path.workflow_id > workflow.id

Ref: path_parent_block.block_id > block.id [delete: Cascade]

Ref: path_parent_block.path_id > path.id [delete: Cascade]

Ref: block.path_id > path.id [delete: Cascade]

Ref: block.workflow_id > workflow.id [delete: Cascade]

Ref: stroke_line.source_block_id > block.id [delete: Cascade]

Ref: stroke_line.target_block_id > block.id [delete: Cascade]

Ref: stroke_line.workflow_id > workflow.id [delete: Cascade]

Ref: scheduled_emails.user_id > user.id [delete: Cascade]

Ref: workspace_invitation.workspace_id > workspace.id [delete: Cascade]

Ref: workspace_invitation.inviter_id > user.id [delete: Cascade]